minor name and gap fixes

--- a/src/components/ListPopup/ListPopup.module.scss
+++ b/src/components/ListPopup/ListPopup.module.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  overflow: auto;
+  overflow: hidden;
   min-width: 100vw;
   min-height: 100vh;
   display: flex;
@@ -10,6 +10,7 @@
   justify-content: center;
   transition: all 0.4s ease-in-out;
   background-color: rgba(#000, 0.5);
+  z-index: 100;
 
   &__dialog {
     z-index: 100;
